# ranepa-pyrus-activity-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  settings.py
common/: event.py  event_manager.py  types.py  utils.py
core/: __init__.py  process_manager.py
core/models/: entities.py
services/: __init__.py
services/base/: __init__.py  event_manager.py  service.py  settings.py
services/base/client/: __init__.py  auth.py  middlewares.py  requester.py
services/base/models/: entities.py  requests.py  responses.py
services/database/: __init__.py  exceptions.py  script.sql  service.py  settings.py
services/database/client/: __init__.py  auth.py
services/database/models/: entities.py
services/pyrus/: __init__.py  exceptions.py  service.py  settings.py  types.py
services/pyrus/client/: __init__.py  auth.py  middlewares.py  requester.py
services/pyrus/models/: entities.py  enums.py  requests.py  responses.py
services/sqs/: __init__.py  enums.py  exceptions.py  service.py  settings.py  types.py
services/sqs/client/: __init__.py  auth.py
services/sqs/models/: entities.py
tests/: core_tests.py  db_tests.py  sqs_tests.py
