[project]
name = "ranepa-pyrus-activity-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "asyncpg>=0.31.0",
    "boto3>=1.42.89",
    "loguru>=0.7.3",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "pyee>=13.0.1",
    "pytest>=9.0.3",
    "yarl>=1.23.0",
]

[dependency-groups]
dev = [
    "types-boto3[sqs]>=1.42.89",
]
